# chan

./: .gitignore  Cargo.toml  README.md  chan.db.example  yarte.toml
src/: api.rs  db.rs  main.rs  structures.rs  ui.rs
templates/: base.hbs  footer.hbs  header.hbs  header.html.hbs  index.hbs  index.html.hbs  post.html.hbs  threads.html.hbs
templates/deep/more/doc/: head.hbs
templates/routes/: boards.hbs
templates_old/: 404.html.hbs  boards.html.hbs  index.html.hbs  layout.html.hbs
